--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "framer-motion": "^11.0.8",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.21.3",
+    "react-to-pdf": "^1.0.1",
     "react-top-loading-bar": "^2.3.1",
     "react-transition-group": "^4.4.5"
   },
