refactor: company card refactoring

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "apexcharts": "^3.49.0",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.8",
     "jspdf": "^2.5.1",
+    "lucide-react": "^0.373.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
