--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^2.2.3",
     "apexcharts": "^3.49.0",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.8",
     "jspdf": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.373.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
