--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
     "@reduxjs/toolkit": "^2.2.3",
     "apexcharts": "^3.49.0",
     "axios": "^1.6.8",
+    "country-state-city": "^3.2.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.8",
     "jspdf": "^2.5.1",
@@ -20,6 +22,7 @@
     "lucide-react": "^0.373.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-country-state-city": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-redux": "^9.1.1",
